--- a/02-Architectures/biblio.bib
+++ b/02-Architectures/biblio.bib
@@ -858,3 +858,37 @@ pages={59--69},
 	annote = {Comment: Preprint, 24 pages, 11 figures, 4 tables},
 	file = {Khacef et al. - 2020 - Brain-inspired self-organization with cellular neu.pdf:/home/noemie/Zotero/storage/TS8SAMRN/Khacef et al. - 2020 - Brain-inspired self-organization with cellular neu.pdf:application/pdf},
 }
+
+
+@article{johnsson_associating_2008b,
+	title = {Associating {SOM} {Representations} of {Haptic} {Submodalities}},
+	abstract = {We have experimented with a bio-inspired selforganizing texture and hardness perception system which automatically learns to associate the representations of the two submodalities with each other. To this end we have developed a microphone based texture sensor and a hardness sensor that measures the compression of the material at a constant pressure. The system is based on a novel variant of the Self-Organizing Map (SOM), called Associative Self-Organizing Map (A-SOM). The A-SOM both develops a representation of its input space and learns to associate this with the activity in an external SOM or A-SOM. The system was trained and tested with multiple samples gained from the exploration of a set of 4 soft and 4 hard objects of different materials with varying textural properties. The system successfully found representations of the texture and hardness submodalities and also learned to associate these with each other.},
+	language = {en},
+	author = {Johnsson, Magnus and Balkenius, Christian},
+	pages = {6},
+	date = {2008}
+}
+
+@inproceedings{Buonamente2013SimulatingAW,
+  title={Simulating Actions with the Associative Self-Organizing Map},
+  author={Miriam Buonamente and Haris Dindo and Magnus Johnsson},
+  booktitle={AIC@AI*IA},
+  year={2013}
+}
+
+@article{buonamente_hierarchies_2016,
+	title = {Hierarchies of {Self}-{Organizing} {Maps} for action recognition},
+	volume = {39},
+	issn = {13890417},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S138904171600005X},
+	doi = {10.1016/j.cogsys.2015.12.009},
+	abstract = {We propose a hierarchical neural architecture able to recognise observed human actions. Each layer in the architecture represents increasingly complex human activity features. The ﬁrst layer consists of a SOM which performs dimensionality reduction and clustering of the feature space. It represents the dynamics of the stream of posture frames in action sequences as activity trajectories over time. The second layer in the hierarchy consists of another SOM which clusters the activity trajectories of the ﬁrst-layer SOM and learns to represent action prototypes. The third- and last-layer of the hierarchy consists of a neural network that learns to label action prototypes of the second-layer SOM and is independent – to certain extent – of the camera’s angle and relative distance to the actor. The experiments were carried out with encouraging results with action movies taken from the INRIA 4D repository. In terms of representational accuracy, measured as the recognition rate over the training set, the architecture exhibits 100\% accuracy indicating that actions with overlapping patterns of activity can be correctly discriminated. On the other hand, the architecture exhibits 53\% recognition rate when presented with the same actions interpreted and performed by a diﬀerent actor. Experiments on actions captured from diﬀerent view points revealed a robustness of our system to camera rotation. Indeed, recognition accuracy was comparable to the single viewpoint case. To further assess the performance of the system we have also devised a behavioural experiments in which humans were asked to recognise the same set of actions, captured from diﬀerent points of view. Results form such a behavioural study let us argue that our architecture is a good candidate as cognitive model of human action recognition, as architectural results are comparable to those observed in humans.},
+	language = {en},
+	urldate = {2022-07-25},
+	journal = {Cognitive Systems Research},
+	author = {Buonamente, Miriam and Dindo, Haris and Johnsson, Magnus},
+	month = sep,
+	year = {2016},
+	pages = {33--41},
+	file = {Buonamente et al. - 2016 - Hierarchies of Self-Organizing Maps for action rec.pdf:/home/noemie/Zotero/storage/PQGPCYZY/Buonamente et al. - 2016 - Hierarchies of Self-Organizing Maps for action rec.pdf:application/pdf},
+}
